# webinar-02022022

./: .env.template  .gitignore  README.md  func_tests.py  pyproject.toml  requirements.txt
apps/pages/: forms.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
func_tests/: tests.py
templates/: base.html  home.html  thank-you.html
templates/includes/: modals.html
